--- a/style.css
+++ b/style.css
@@ -1,22 +1,97 @@
 /*
 Theme name : Université Paris-Saclay  by Paradisiak
 Version : 1.0
+
+Couleur 1 : #8B1B59
+Couleur red Footer : #312336
+
 */
 
 
 
-* 
-{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 
-body 
-{
+body {
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    background-color: red;
+}
+
+/* Header Bouton & Queries  */
+
+.btn {
+    background-color: #8B1B59;
+    color: #ffffff;
+    border: none;
+    border-radius: 0;
+    padding: 0.7em;
+}
+
+.btn:hover{
+   transition: 0.5ms all;
+}
+
+.mobilite-btn{
+    background-color: #ffffff;
+    border: #8B1B59 solid 2px;
+    color:  #8B1B59;
+    margin-right: 1rem
+}
+
+
+/* Header image & Queries  */
+  
+.header-image{
+    background:url(assets/images/university-header.jpg);
+    height:350px ;
+}
+
+
+/* Moteur de recherche  & Queries */
+
+
+
+
+/* Footer & Queries */
+
+
+footer{
+    background-color: #312336;
+    color: white;
+    font-size: 1.1em;
+}
+
+footer .titre-footer{
+    font-size: 1.3em;
+}
+
+footer a{
+    text-decoration: none;
+}
+
+footer a:hover{
+    text-decoration: underline;
+}
+
+.texte-univ{
+    font-weight: 700;
+}
+
+footer .fa-brands{
+    font-size: 2em;
+    padding: 0.2em;
+}
+
+footer a .fa-brands{
+    color: #ffffff;
+    transition: 0.3s all;
+}
+
+footer a .fa-brands:hover{
+    color: #8B1B59;
+    transition: 0.3s all;
 }
