--- a/style.css
+++ b/style.css
@@ -34,16 +34,45 @@ RVB: 246, 246, 246
 
 /* Intégration des polices OpenSans */
 
-@font-face{
+@font-face {
+    font-family: "OpenSansBold";
+    src: url(assets/font/static/OpenSans/OpenSans-Bold.ttf);
+}
+
+@font-face {
+    font-family:"OpenSansBoldItalic" ;
+    src: url(assets/font/static/OpenSans/OpenSans-BoldItalic.ttf);
+}
+
+@font-face {
+    font-family: "OpenSansExtraBoldItalic";
+    src: url(assets/font/static/OpenSans/OpenSans-ExtraBoldItalic.ttf);
+}
+
+@font-face {
     font-family: "OpenSansItalic";
-    src: url(assets/font/OpenSans-Italic-VariableFont_wdth\,wght.ttfZZ);
+    src: url(assets/font/static/OpenSans/OpenSans-Italic.ttf);
 }
 
-@font-face{
-    font-family: "";
-    src: url(assets/font/OpenSans-Italic-VariableFont_wdth\,wght.ttfZZ);
+@font-face {
+    font-family: "OpenSansLight";
+    src: url(assets/font/static/OpenSans/OpenSans-Light.ttf);
 }
 
+@font-face {
+    font-family: "OpenSansRegular";
+    src: url(assets/font/static/OpenSans/OpenSans-Regular.ttf);
+}
+
+@font-face {
+    font-family: "OpenSansSemiBold";
+    src: url(assets/font/static/OpenSans/OpenSans-SemiBold.ttf);
+}
+
+@font-face {
+    font-family:"OpenSansSemiBoldItalic" ;
+    src: url(assets/font/static/OpenSans/OpenSans-SemiBoldItalic.ttf);
+}
 
 
 * {
@@ -56,9 +85,36 @@ RVB: 246, 246, 246
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Open';
+    font-family: "";
 
 }
+
+h1{
+
+}
+
+h2{
+    
+}
+
+h3{
+    
+}
+
+h4{
+    
+}
+
+h5{
+    
+}
+
+h6{
+    
+}
+
+
+
 
 /* Header Bouton & Queries  */
 
