--- a/style.css
+++ b/style.css
@@ -129,7 +129,14 @@ h5 {}
 
 h6 {}
 
+a {
+    text-decoration: none;
+    color: #312336;
+}
 
+a:hover {
+    color: #8B1B59;
+}
 
 
 /* Header Bouton & Queries  */
@@ -172,13 +179,13 @@ h6 {}
     transition: .8ms all;
 }
 
-.lien-metier{
+.lien-metier {
     color: #8B1B59;
     padding: 15px;
     text-decoration: none;
 }
 
-.lien-metier:hover{
+.lien-metier:hover {
     color: #8B1B59;
     padding: 15px;
     text-decoration: underline;
@@ -201,7 +208,7 @@ h6 {}
     background-color: #224667;
 }
 
-.filtre{
+.filtre {
     font-size: 1.5em;
 }
 
@@ -293,7 +300,31 @@ h6 {}
 
 /* Page Poste */
 
+.breadcrumb {
+    margin-top: 0.7em;
+    margin-left: 0.3em;
+}
 
+.bloc-fil-ariane .fa-home {
+    color: #8B1B59;
+}
+
+.bloc-detail-offre {
+    background-color: #8B1B59;
+}
+
+.btn-back-home {
+    color: #ffffff;
+    background-color: #224667;
+    margin-right: 1rem;
+    transition: .8ms all;
+    border: #224667 solid 2px;
+
+}
+
+.post-details {
+    font-size: 1.4em;
+}
 
 
 
